2.2.3/_sources/gallery/style_sheets/plot_solarizedlight2.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_style_sheets_plot_solarizedlight2.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_style_sheets_plot_solarizedlight2.py:


==========================
Solarized Light stylesheet
==========================

This shows an example of "Solarized_Light" styling, which
tries to replicate the styles of:

 - `<http://ethanschoonover.com/solarized>`__
 - `<https://github.com/jrnold/ggthemes>`__
 - `<http://pygal.org/en/stable/documentation/builtin_styles.html#light-solarized>`__

and work of:

 - `<https://github.com/tonysyu/mpltools>`__

using all 8 accents of the color palette - starting with blue

ToDo:
    - Create alpha values for bar and stacked charts. .33 or .5
    - Apply Layout Rules




.. image:: /gallery/style_sheets/images/sphx_glr_plot_solarizedlight2_001.png
    :class: sphx-glr-single-img





.. code-block:: python

    import matplotlib.pyplot as plt
    import numpy as np
    x = np.linspace(0, 10)
    with plt.style.context('Solarize_Light2'):
        plt.plot(x, np.sin(x) + x + np.random.randn(50))
        plt.plot(x, np.sin(x) + 2 * x + np.random.randn(50))
        plt.plot(x, np.sin(x) + 3 * x + np.random.randn(50))
        plt.plot(x, np.sin(x) + 4 + np.random.randn(50))
        plt.plot(x, np.sin(x) + 5 * x + np.random.randn(50))
        plt.plot(x, np.sin(x) + 6 * x + np.random.randn(50))
        plt.plot(x, np.sin(x) + 7 * x + np.random.randn(50))
        plt.plot(x, np.sin(x) + 8 * x + np.random.randn(50))
        # Number of accent colors in the color scheme
        plt.title('8 Random Lines - Line')
        plt.xlabel('x label', fontsize=14)
        plt.ylabel('y label', fontsize=14)

    plt.show()


.. _sphx_glr_download_gallery_style_sheets_plot_solarizedlight2.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: plot_solarizedlight2.py <plot_solarizedlight2.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: plot_solarizedlight2.ipynb <plot_solarizedlight2.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
